Ultimos detalles de ejercicio 1

--- a/src/style.css
+++ b/src/style.css
@@ -23,17 +23,20 @@
 .container--bg-red {
     background-color: #910000;
 }
-.container--border {
-    border: 1px solid;
-}
 .container--w-80 {
     width: 80%;
 }
 .container--m-center {
     margin: 0 auto;
 }
+.container--mt-20 {
+    margin-top: 20px;
+}
 .container--h-250 {
     height: 250px;
+}
+.container--p-10 {
+    padding: 10%;
 }
 .container__title {
     margin-bottom: 1rem;
